<resources>
    <string name="app_name">App Ban Hang</string>
    <string name="login_name">Đăng nhập</string>
    <string name="HovaTen">Họ và tên</string>
    <string name="username">Tên tài khoản</string>
    <string name="Password">Mật khẩu</string>
    <string name="enter_username">Nhập tên tài khoản của bạn</string>
    <string name="enter_name">Nhập họ và tên của bạn</string>
    <string name="enter_password">Nhập mật khẩu của bạn</string>
    <string name="checkbox_state">Giữ trạng thái đăng nhập</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="option_login">hoặc đăng nhập với</string>
    <string name="signup_name">Đăng ký</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="sanphammoi">Game mới nhất</string>
    <string name="app_title">App bán hàng của Vũ</string>
    <string name="add_to_cart">Thêm vào giỏ hàng</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>