<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <FrameLayout
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="200dp">
        <ImageView
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/login_game"
            android:layout_width="200dp"
            android:layout_height="200dp"/>
        <ImageView
            android:scaleType="fitXY"
            android:src="@drawable/background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </FrameLayout>

    <TextView
        android:textColor="#F44336"
        android:textStyle="bold"
        android:layout_marginHorizontal="10dp"
        android:textSize="28dp"
        android:gravity="center"
        android:text="@string/login_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="14sp"
        android:text="@string/username"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:textCursorDrawable="@drawable/custom_cursor_color"
        android:id="@+id/editTextUsernameLogin"
        android:backgroundTint="#F44336"
        android:hint="@string/enter_username"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="14sp"
        android:text="@string/Password"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <FrameLayout
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:textCursorDrawable="@drawable/custom_cursor_color"
            android:inputType="textPassword"
            android:id="@+id/editTextPasswordLogin"
            android:backgroundTint="#F44336"
            android:hint="@string/enter_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/imageViewShowPassLogin"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:src="@drawable/eye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </FrameLayout>


    <RelativeLayout
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:buttonTint="@color/custom_checkbox"
            android:id="@+id/checkBoxLoginState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_state" />
        <TextView
            android:id="@+id/textViewForgotPassword"
            android:layout_marginTop="5dp"
            android:layout_alignParentRight="true"
            android:textColor="#F44336"
            android:text="@string/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <Button
        android:id="@+id/buttonLogin"
        android:textColor="@color/white"
        android:background="@drawable/custom_button_login"
        android:text="@string/login_name"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:weightSum="10"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textviewSignup"
            android:textColor="#F44336"
            android:textStyle="bold"
            android:gravity="end"
            android:layout_weight="4"
            android:text="@string/signup_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_weight="6"
            android:gravity="start"
            android:textStyle="bold"
            android:text="@string/option_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <androidx.cardview.widget.CardView
        app:cardCornerRadius="10dp"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageButtonFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/facebook" />
            <ImageView
                android:layout_marginHorizontal="10dp"
                android:id="@+id/imageButtonGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                app:srcCompat="@drawable/google"/>
            <ImageView
                android:id="@+id/imageButtonTwitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/twitter" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>



</LinearLayout>